...
        Row (Modifier.fillMaxWidth()){
            DefaultRadioButton(text = "Date", selected = noteOrder is NoteOrder.Date) {
                onOrderChange(NoteOrder.Date(noteOrder.orderType))
            }
            Spacer(modifier = Modifier.width(8.dp))

            DefaultRadioButton(text = "Title", selected = noteOrder is NoteOrder.Title) {
                onOrderChange(NoteOrder.Title(noteOrder.orderType))
            }
            Spacer(modifier = Modifier.width(8.dp))

            DefaultRadioButton(text = "Color", selected = noteOrder is NoteOrder.Color) {
                onOrderChange(NoteOrder.Color(noteOrder.orderType))
...
        Row (Modifier.fillMaxWidth()){
            DefaultRadioButton(text = "Ascending", selected = noteOrder.orderType is OrderType.Ascending) {
                onOrderChange(noteOrder.copy(OrderType.Ascending))
            }
            Spacer(modifier = Modifier.width(8.dp))

            DefaultRadioButton(text = "Descending", selected = noteOrder.orderType is OrderType.Descending) {
                onOrderChange(noteOrder.copy(OrderType.Descending))
            }
        }
    }

}
