...

    Scaffold(
        floatingActionButton = {
            FloatingActionButton(onClick = {
                   navController.navigate(Screens.AddEditNoteScreen.route)
            }, backgroundColor = MaterialTheme.colors.primary) {
                Icon(imageVector = Icons.Default.Add, contentDescription = "add note")
            }
        },
        scaffoldState = scaffoldState
    ) {
        Column(
            Modifier
...
            ) {
                Text(text = "My Notes", style = MaterialTheme.typography.h4)
                
                IconButton(onClick = {
                    viewModel.onEvent(NotesEvent.ToggleOrderSection)
                }) {
                    Icon(imageVector = Icons.Default.Sort, contentDescription ="Sort")
                }
            }

            AnimatedVisibility(visible = state.isOrderSectionVisible, enter = fadeIn() + slideInVertically(), exit = fadeOut() + slideOutVertically()) {
                OrderSection(modifier = Modifier
                    .testTag(TestTags.ORDER_SECTION)
...
