...

    Scaffold(
        floatingActionButton = {
            FloatingActionButton(onClick = {
                viewModel.onEvent(AddEditNoteEvent.SaveNote)
            }, backgroundColor = MaterialTheme.colors.primary) {
                Icon(imageVector = Icons.Default.Save, contentDescription = "Save note")
            }
        }, scaffoldState = scaffoldState
    ) { paddingValues->
        Column(
            modifier = Modifier
                .fillMaxSize()
...
